--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Help</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <a href="/"
-      ><img id="yelp" src="../client/assets/yelp_logo.png" alt="logo"
-    /></a>
+    <a href="/"><img id="yelp" src="../client/assets/help.png" alt="logo" /></a>
     <link rel="stylesheet" href="/client/style.css" type="text/css" />
   </head>
   <body>
-    <header></header>
     <div id="root"></div>
     <!-- <script src="/build/bundle.js"></script> -->
   </body>
